@@ -34,6 +34,26 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|Logger
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|LoggerFactory
+import|;
+end_import
+
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -66,6 +86,22 @@ name|ArabicLetterTokenizerFactory
 extends|extends
 name|BaseTokenizerFactory
 block|{
+DECL|field|log
+specifier|private
+specifier|static
+specifier|final
+name|Logger
+name|log
+init|=
+name|LoggerFactory
+operator|.
+name|getLogger
+argument_list|(
+name|ArabicLetterTokenizerFactory
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 annotation|@
 name|Override
 DECL|method|init
@@ -92,9 +128,17 @@ expr_stmt|;
 name|assureMatchVersion
 argument_list|()
 expr_stmt|;
-name|warnDeprecated
+name|log
+operator|.
+name|warn
 argument_list|(
-literal|"Use StandardTokenizerFactory instead."
+name|getClass
+argument_list|()
+operator|.
+name|getSimpleName
+argument_list|()
+operator|+
+literal|" is deprecated. Use StandardTokenizeFactory instead."
 argument_list|)
 expr_stmt|;
 block|}
