@@ -320,6 +320,26 @@ name|ResourceLoaderAware
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|Logger
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|LoggerFactory
+import|;
+end_import
+
 begin_comment
 comment|/**  * @deprecated (3.4) use {@link SynonymFilterFactory} instead. this is only a backwards compatibility  *                   mechanism that will be removed in Lucene 5.0  */
 end_comment
@@ -340,6 +360,22 @@ name|BaseTokenFilterFactory
 implements|implements
 name|ResourceLoaderAware
 block|{
+DECL|field|log
+specifier|public
+specifier|static
+specifier|final
+name|Logger
+name|log
+init|=
+name|LoggerFactory
+operator|.
+name|getLogger
+argument_list|(
+name|FSTSynonymFilterFactory
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 DECL|field|map
 specifier|private
 name|SynonymMap
